<package format="2">
  <name>octomap_rviz_plugin</name>
  <version>0.2.2</version>
  <description>
     A set of plugins for displaying occupancy information decoded from binary octomap messages. 
  </description>
  <maintainer email="armin@hornung.io">Armin Hornung</maintainer>
  <maintainer email="w.merkt+oss@gmail.com">Wolfgang Merkt</maintainer>
  <maintainer email="jonatan.gines@urjc.es">jginesclavero</maintainer>
  <author email="jkammerl@willowgarage.com">Julius Kammerl</author>

  <url type="website">http://ros.org/wiki/octomap_rviz_plugins</url>
  <url type="bugtracker">https://github.com/OctoMap/octomap_rviz_plugins/issues</url>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz_ogre_vendor</build_depend>

  <build_export_depend>rviz_ogre_vendor</build_export_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz_ogre_vendor</exec_depend>

  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>resource_retriever</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>map_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
